2007-08-14  Paolo Borelli  <pborelli@katamail.com>

	* gedit/gedit-statusbar.c:
	* gedit/gedit-tooltips.c:
	* gedit/gedit-tooltips.h:
	* gedit/dialogs/gedit-preferences-dialog.c.orig:
	* gedit/dialogs/gedit-preferences-dialog.c:
	* gedit/gedit-notebook.c:
	* gedit/gedit-view.c:
	* gedit/gedit-print-job-preview.c:
	* gedit/gedit-panel.c:

	Use the new gtk tooltips API and remove custom gedit-tooltips
	implementation. Patch by Alexandre Mazari (bug #456717).

2007-08-12  Paolo Borelli  <pborelli@katamail.com>

	* gedit/gedit-document.c: save the metadata in ::dispose()
	so that we have a valid language. Fixes bug #464382.

2007-08-12  Paolo Borelli  <pborelli@katamail.com>

	* gedit/gedit-io-error-message-area.c: avoid conflicting
	accelerators. Patch by Patrick Wade, bug #444909.

2007-08-12  Vincent Geddes  <vgeddes@gnome.org>

	* plugins/spell/languages-dialog.glade2,
	plugins/docinfo/docinfo.glade2,
	plugins/time/time.glade2,	 
	plugins/time/gedit-time-plugin.c,
	gedit/dialogs/gedit-open-location-dialog.c,
	gedit/dialogs/gedit-encodings-dialog.c,
	gedit/dialogs/gedit-page-setup-dialog.c,
	gedit/dialogs/gedit-search-dialog.glade,
	gedit/dialogs/gedit-preferences-dialog.c,
	gedit/dialogs/gedit-search-dialog.c:
	  
	Ensure all dialogs have HIG compliant border widths
	and spacings (#341650).

2007-08-11  Paolo Borelli  <pborelli@katamail.com>

	* gedit/gedit-document.c: make sure the search highlighting
	text tag has higher priority than syntax highlighting tags.

2007-08-11  Paolo Borelli  <pborelli@katamail.com>

	* gedit/gedit-document.c: obtain the search-match highlighing
	color from the style scheme if it specified. Based on a patch
	by Paolo Maggi.

2007-08-10  Paolo Borelli  <pborelli@katamail.com>

	* plugins/Makefile.am: modelines is in C these days so it should
	always be built. Spotted by Rui Tiago Cação Matos.

2007-08-08  Jesse van den Kieboom  <jesse@icecrew.nl>

	* plugins/filebrowser/gedit-file-browser-widget.c: removed the warning