@@ -1,3 +1,9 @@
+2007-08-15  Paolo Maggi  <paolo@gnome.org>
+
+	* gedit/gedit-metadata-manager.c: the debug output of the metadata 
+	manager was too verbose. Now verbose debug output is enabled only when
+	GEDIT_METADATA_VERBOSE_DEBUG is #defined
+
 2007-08-14  Paolo Borelli  <pborelli@katamail.com>
 
 	* gedit/gedit-statusbar.c:
